[package]
name = "rupert"
version = "0.1.0"
authors = ["Anders Bennehag <anders@bennehag.com>"]

[dependencies]
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"
toml = "0.4.5"
error-chain = "0.11.0"
lazy_static = "0.2.8"
git2 = "0.6"
log = "0.3.8"
env_logger = "0.4.3"
clap = "2.26.0"
yansi = "0.3.4"

[dev-dependencies]
env_logger = "0.4.3"
